[package]
name = "runtime_boostrapper"
version = "0.1.0"
edition = "2021"

[features]
testapp = []

[dependencies]
bytes = "1.5.0"
bytesize = "1.3.0"
derive = "1.0.0"
flate2 = "1.0.28"
futures-util = "0.3.28"
hex = { version = "0.4.3", features = ["serde"] }
netcorehost = "0.15.1"
reqwest = { version = "0.11.22", features = ["stream"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
sha2 = "0.10.8"
tar = "0.4.40"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
url = "2.4.1"
zip = { version = "0.6.6", default-features = false, features = ["bzip2", "deflate", "zstd"] }

[build-dependencies]
embed-manifest = "1.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.51.1", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Controls", "Win32_System_Console", "Win32_System_LibraryLoader", "Win32_System_SystemServices", "Win32_Graphics_Gdi"] }