[package]
name = "piton"
version = "0.1.0"
edition = "2021"

[features]
default = ["cli"]
cli = ["dep:indicatif"]
gui = ["dep:gtk", "dep:windows", "dep:objc", "dep:cacao"]
testapp = []

[dependencies]
bytes = { default-features = false, version = "1.5.0" }
bytesize = "1.3.0"
derive = "1.0.0"
flate2 = { features = ["rust_backend"], default-features = false, version = "1.0.28" }
futures-util = { default-features = false, version = "0.3.28" }
hex = { version = "0.4.3", features = ["serde"] }
netcorehost = { git = "https://github.com/OpenByteDev/netcorehost.git" }
reqwest = { version = "0.11.22", features = ["default-tls", "stream"], default-features = false }
serde = { version = "1.0.188", features = ["derive"], default-features = false }
serde_yaml = "0.9.25"
sha2 = { default-features = false, version = "0.10.8" }
tar = { default-features = false, version = "0.4.40" }
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["rt-multi-thread"], default-features = false }
url = "2.4.1"
zip = "0.6.6"

indicatif = { version = "0.17.7", optional = true }

[build-dependencies]
embed-manifest = "1.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18.1", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.51.1", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Controls", "Win32_System_Console", "Win32_System_LibraryLoader", "Win32_System_SystemServices", "Win32_Graphics_Gdi"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = { version = "0.2.7", optional = true }
cacao = { version = "0.4.0-beta2", optional = true }